learning/08_.net_project/nginx-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: nginx-deployment
  labels:  
    app: nginx
  namespace: nginx
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers: 
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
