learning/08_.net_project/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1 
metadata:
  name: nginx-notes-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /nginx
          pathType: Prefix
          backend: 
            service:
              name: nginx-service
              port: 
                number: 8080

        - pathType: Prefix
          path: /
          backend:
            service:
              name: notes-app-service
              port: 
                number: 8000
